--- a/content/resources/mit18_782f13_lec1.md
+++ b/content/resources/mit18_782f13_lec1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture 1.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/bb7d15e5b09a2af2f480847680378699_MIT18_782F13_lec1.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 1
 uid: bb7d15e5-b09a-2af2-f480-847680378699
