--- a/content/resources/mit18_782f13_lec10.md
+++ b/content/resources/mit18_782f13_lec10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture 10.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/196f7a627ae6d75ab009bbef96e7c8c9_MIT18_782F13_lec10.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 10
 uid: 196f7a62-7ae6-d75a-b009-bbef96e7c8c9
