--- a/content/resources/mit18_782f13_lec11.md
+++ b/content/resources/mit18_782f13_lec11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture 11.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/07649a23c61675ef75f12a8b77367e93_MIT18_782F13_lec11.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 11
 uid: 07649a23-c616-75ef-75f1-2a8b77367e93
