--- a/content/resources/mit18_782f13_lec12.md
+++ b/content/resources/mit18_782f13_lec12.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 12.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/f8693d9e3afab505ba23b3b91590aa4a_MIT18_782F13_lec12.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 12
 uid: f8693d9e-3afa-b505-ba23-b3b91590aa4a
