--- a/content/resources/mit18_782f13_lec13.md
+++ b/content/resources/mit18_782f13_lec13.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 13.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/c6986079bc69909f419f02c76095c60b_MIT18_782F13_lec13.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 13
 uid: c6986079-bc69-909f-419f-02c76095c60b
