--- a/content/resources/mit18_782f13_lec15.md
+++ b/content/resources/mit18_782f13_lec15.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture 15.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/194e47df6e1f016ee3fb2719abe7e8d3_MIT18_782F13_lec15.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 15
 uid: 194e47df-6e1f-016e-e3fb-2719abe7e8d3
