--- a/content/resources/mit18_782f13_lec19.md
+++ b/content/resources/mit18_782f13_lec19.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 19.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/9d3d75948f44aaa1b2258e948f7433c8_MIT18_782F13_lec19.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 19
 uid: 9d3d7594-8f44-aaa1-b225-8e948f7433c8
