--- a/content/resources/mit18_782f13_lec2.md
+++ b/content/resources/mit18_782f13_lec2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture 2.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/6eae6b1494f578c80270d5cab39ba377_MIT18_782F13_lec2.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 2
 uid: 6eae6b14-94f5-78c8-0270-d5cab39ba377
