--- a/content/resources/mit18_782f13_lec23.md
+++ b/content/resources/mit18_782f13_lec23.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 23.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/4d7cbdfde9c10df99b731bf2753611cc_MIT18_782F13_lec23.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 23
 uid: 4d7cbdfd-e9c1-0df9-9b73-1bf2753611cc
