--- a/content/resources/mit18_782f13_lec25.md
+++ b/content/resources/mit18_782f13_lec25.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 25.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/e011c006f6aeb95083197457da90598d_MIT18_782F13_lec25.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 25
 uid: e011c006-f6ae-b950-8319-7457da90598d
