--- a/content/resources/mit18_782f13_lec3.md
+++ b/content/resources/mit18_782f13_lec3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture 3.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/9e54a882c5f1c445b05c7e222d4a843a_MIT18_782F13_lec3.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 3
 uid: 9e54a882-c5f1-c445-b05c-7e222d4a843a
