--- a/content/resources/mit18_782f13_lec4.md
+++ b/content/resources/mit18_782f13_lec4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 4.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/f7cc2a94e9b4dc60178da5c0a793e610_MIT18_782F13_lec4.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 4
 uid: f7cc2a94-e9b4-dc60-178d-a5c0a793e610
