--- a/content/resources/mit18_782f13_lec5.md
+++ b/content/resources/mit18_782f13_lec5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 5.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/6fa17c4b03bb6826fd2731ee2da74e2b_MIT18_782F13_lec5.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 5
 uid: 6fa17c4b-03bb-6826-fd27-31ee2da74e2b
