--- a/content/resources/mit18_782f13_lec7.md
+++ b/content/resources/mit18_782f13_lec7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 7.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/809d3d3d9f68d4d6eff3c4f064eee30d_MIT18_782F13_lec7.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 7
 uid: 809d3d3d-9f68-d4d6-eff3-c4f064eee30d
