--- a/content/resources/mit18_782f13_lec9.md
+++ b/content/resources/mit18_782f13_lec9.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding lecture note 9.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/43669880049d09aa640c4493063069f6_MIT18_782F13_lec9.pdf
 file_type: application/pdf
+parent_uid: 276fb8e9-5426-093b-04af-2643fa3757df
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Lecture Note 9
 uid: 43669880-049d-09aa-640c-4493063069f6
