--- a/content/resources/mit18_782f13_pset1.md
+++ b/content/resources/mit18_782f13_pset1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding problem set 1.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/b9bf30e32ac75d84c45317397e7e13b1_MIT18_782F13_pset1.pdf
 file_type: application/pdf
+parent_uid: afe48428-bfbf-4da8-2de5-6dc801dc413d
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Problem Set 1
 uid: b9bf30e3-2ac7-5d84-c453-17397e7e13b1
