--- a/content/resources/mit18_782f13_pset10.md
+++ b/content/resources/mit18_782f13_pset10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding problem set 10.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/f12498949ff871927f56ddc2cd8ea9d6_MIT18_782F13_pset10.pdf
 file_type: application/pdf
+parent_uid: afe48428-bfbf-4da8-2de5-6dc801dc413d
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Problem Set 10
 uid: f1249894-9ff8-7192-7f56-ddc2cd8ea9d6
