--- a/content/resources/mit18_782f13_pset11.md
+++ b/content/resources/mit18_782f13_pset11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding problem set 11.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/876559f31fa529caa5ba30e7f663b798_MIT18_782F13_pset11.pdf
 file_type: application/pdf
+parent_uid: afe48428-bfbf-4da8-2de5-6dc801dc413d
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Problem Set 11
 uid: 876559f3-1fa5-29ca-a5ba-30e7f663b798
