--- a/content/resources/mit18_782f13_pset3.md
+++ b/content/resources/mit18_782f13_pset3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding problem set 3.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/ea1eb6102a9cf4ab0b74c08bfc2392e0_MIT18_782F13_pset3.pdf
 file_type: application/pdf
+parent_uid: afe48428-bfbf-4da8-2de5-6dc801dc413d
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Problem Set 3
 uid: ea1eb610-2a9c-f4ab-0b74-c08bfc2392e0
