--- a/content/resources/mit18_782f13_pset5.md
+++ b/content/resources/mit18_782f13_pset5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding problem set 5.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/fcc8b1e5f0f083a50aa348b03a1a8204_MIT18_782F13_pset5.pdf
 file_type: application/pdf
+parent_uid: afe48428-bfbf-4da8-2de5-6dc801dc413d
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Problem Set 5
 uid: fcc8b1e5-f0f0-83a5-0aa3-48b03a1a8204
