--- a/content/resources/mit18_782f13_pset7.md
+++ b/content/resources/mit18_782f13_pset7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding problem set 7.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/0c32e3ce48a9637374e89902ae5c342d_MIT18_782F13_pset7.pdf
 file_type: application/pdf
+parent_uid: afe48428-bfbf-4da8-2de5-6dc801dc413d
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Problem Set 7
 uid: 0c32e3ce-48a9-6373-74e8-9902ae5c342d
