--- a/content/resources/mit18_782f13_pset8.md
+++ b/content/resources/mit18_782f13_pset8.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding problem set 8.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/75f6cee325018a8fa25dadb3e448a7e7_MIT18_782F13_pset8.pdf
 file_type: application/pdf
+parent_uid: afe48428-bfbf-4da8-2de5-6dc801dc413d
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Problem Set 8
 uid: 75f6cee3-2501-8a8f-a25d-adb3e448a7e7
