--- a/content/resources/mit18_782f13_pset9.md
+++ b/content/resources/mit18_782f13_pset9.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource file contains information regarding problem set 9.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-782-introduction-to-arithmetic-geometry-fall-2013/f88ba2ddf40ed19110561670af50be4a_MIT18_782F13_pset9.pdf
 file_type: application/pdf
+parent_uid: afe48428-bfbf-4da8-2de5-6dc801dc413d
 resourcetype: Document
 title: 18.782 Arithmetic Geometry Problem Set 9
 uid: f88ba2dd-f40e-d191-1056-1670af50be4a
